Rename guest_order resource to guest_orders
Makes more sense to think of it like a collection than a single resource

--- a/app/views/guest_orders/_form.html.erb
+++ b/app/views/guest_orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@guest_order, url: guest_order_path, defaults: { label: false, input_html: { :class => 'transparent' }}) do |f| %>
+<%= simple_form_for(@guest_order, url: guest_orders_path, defaults: { label: false, input_html: { :class => 'transparent' }}) do |f| %>
 
   <%= f.input :first_name, placeholder: 'First name', autofocus: true %>
 
