--- a/app/views/parkings/_form.html.erb
+++ b/app/views/parkings/_form.html.erb
@@ -2,6 +2,8 @@
 
   <%= f.input :location %>
 
+  <%= f.input :itinerary %>
+
   <hr>
 
   <%= f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
