--- a/app/views/parkings/_form.html.erb
+++ b/app/views/parkings/_form.html.erb
@@ -4,6 +4,8 @@
 
   <%= f.input :itinerary %>
 
+  <%= f.input :published %>
+
   <hr>
 
   <%= f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
