--- a/app/views/parkings/show.html.erb
+++ b/app/views/parkings/show.html.erb
@@ -13,6 +13,12 @@
 
 <div class="row">
   <div class="col col-lg-12">
+    <%= @parking.published? ? 'Published' : 'Unpublished' %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col col-lg-12">
     <%= render @parking %>
   </div><!-- /.col -->
 </div><!-- /.row -->
