Add basic and placeholder markup for OrdersController#new template

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,18 +1,47 @@
 <%= simple_form_for @order do |f| %>
 
-  <%= f.association :rent, collection: Rent.all, selected: @rent.id, prompt: 'Select a rent' %>
+  <%= f.input :rent_id, as: :hidden, input_html: { value: @rent.id } %>
 
+  <h3>Vehicle</h3>
   <% if @order.user.vehicles.many? %>
     <%= f.association :vehicle, collection: @order.user.vehicles, prompt: 'Select a vehicle' %>
 
   <% elsif @order.user.vehicles.one? %>
-    <%= f.association :vehicle, collection: @order.user.vehicles, selected: @order.user.vehicles.first %>
+    Vehicle: <%= @order.user.vehicles.first.license_plate %>
+    <%= f.input :vehicle_id, as: :hidden, input_html: { value: @order.user.vehicles.first.id } %>
   <% end %>
 
-  <h3>Add a vehicle</h3>
+  <h4>Add a vehicle</h4>
   <%= simple_fields_for(@vehicle, defaults: { label: false, input_html: { :class => 'transparent'}}) do |vehicle_form| %>
     <%= render 'vehicles/fields', f: vehicle_form %>
   <% end %>
 
-  <%= f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
+  <hr>
+
+  <h3>Details</h3>
+
+  Price: <%= number_to_currency(@rent.price) %> <br>
+  Fees: <%= number_to_currency(Money.new(400, 'CAD')) %> <br>
+  Total: <%= number_to_currency(Money.new(400, 'CAD') + @rent.price) %>
+
+  <hr>
+
+  <h3>Terms</h3>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, nulla, similique, optio consequatur qui suscipit vero quaerat fugit quisquam culpa illum obcaecati modi tempora animi debitis aspernatur facilis minus dicta.</p>
+  <%# f.input :terms_of_service %>
+
+  <hr>
+
+  <h3>Payment</h3>
+
+  <script
+    src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
+    data-key=<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>
+    data-amount="2000"
+    data-name="Demo Site"
+    data-description="2 widgets ($20.00)">
+  </script>
+
+  <%# f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
 <% end %>
