Move Rent beginning and termination logic to schedule

--- a/app/views/rents/_rent_listing.html.erb
+++ b/app/views/rents/_rent_listing.html.erb
@@ -5,8 +5,8 @@
 
   <ul>
     <li><%= rent.price %></li>
-    <li><%= rent.beginning %></li>
-    <li><%= rent.termination %></li>
+    <li><%= rent.start_date %></li>
+    <li><%= rent.end_date %></li>
   </ul>
 
   <footer>
