--- a/app/views/rents/_rent.html.erb
+++ b/app/views/rents/_rent.html.erb
@@ -5,7 +5,7 @@
 
   <ul>
     <li><%= rent.price %></li>
-    <li><%= rent.beginning %></li>
-    <li><%= rent.termination %></li>
+    <li><%= rent.start_date %></li>
+    <li><%= rent.end_date %></li>
   </ul>
 <% end %>
