--- a/app/views/onboardings/_form.html.erb
+++ b/app/views/onboardings/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <%= simple_form_for(@onboarding, url: onboarding_path, defaults: { label: false, input_html: { :class => 'transparent' }}) do |f| %>
+  <%= simple_form_for(@onboarding, url: onboarding_path, defaults: { label: false, input_html: { class: 'transparent' }}) do |f| %>
 
     <div class="col col-lg-6">
       <fieldset>
@@ -17,15 +17,15 @@
         <legend>Your Parking</legend>
 
         <%= f.input :location,    placeholder: 'Location' %>
-        <%= f.input :beginning,   placeholder: 'Beginning', input_html: { :class => 'transparent js-datepicker' } %>
-        <%= f.input :termination, placeholder: 'Termination', input_html: { :class => 'transparent js-datepicker' } %>
+        <%= f.input :start_time,  placeholder: 'Start time', input_html: { class: 'transparent js-datepicker' } %>
+        <%= f.input :end_time,    placeholder: 'End time', input_html: { class: 'transparent js-datepicker' } %>
         <%= f.input :price,       placeholder: 'Price' %>
 
       </fieldset>
 
       <hr>
 
-      <%= f.button :submit, 'Create listing', data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary btn-block' %>
+      <%= f.button :submit, 'Create listing', data: { disable_with: 'Please wait ...' }, class: 'btn btn-primary btn-block' %>
     </div>
 
   <% end %>
