--- a/app/views/parkings/_form.html.erb
+++ b/app/views/parkings/_form.html.erb
@@ -8,5 +8,5 @@
 
   <hr>
 
-  <%= f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
+  <%= f.button :submit, data: { disable_with: 'Please wait ...' }, class: 'btn btn-primary' %>
 <% end %>
