--- a/app/views/parkings/_search_form.html.erb
+++ b/app/views/parkings/_search_form.html.erb
@@ -2,25 +2,25 @@
   <div class="col col-lg-10 col-lg-offset-1">
 
     <div class="row">
-      <%= simple_form_for :search, url: parkings_path, method: :get, html: { :class => 'form-inline' } do |f| %>
+      <%= simple_form_for :search, url: parkings_path, method: :get, html: { class: 'form-inline' } do |f| %>
         <div class="col col-lg-4">
-          <%= f.input :location, wrapper: false, input_html: { :class => 'form-control transparent js-geocomplete', :autocomplete => false }, placeholder: 'Québec, Montréal, ...', label: false %>
+          <%= f.input :location, wrapper: false, input_html: { class: 'form-control transparent js-geocomplete', :autocomplete => false }, placeholder: 'Québec, Montréal, ...', label: false %>
         </div>
 
         <div class="col col-lg-1">
-          <%= f.input :distance, wrapper: false, input_html: { :class => 'form-control transparent' }, placeholder: 'distance', label: false, required: false %>
+          <%= f.input :distance, wrapper: false, input_html: { class: 'form-control transparent' }, placeholder: 'distance', label: false, required: false %>
         </div>
 
         <div class="col col-lg-2">
-          <%= f.input :begining, wrapper: false, input_html: { :class => 'form-control transparent js-datepicker' }, placeholder: 'begining', label: false, required: false %>
+          <%= f.input :begining, wrapper: false, input_html: { class: 'form-control transparent js-datepicker' }, placeholder: 'begining', label: false, required: false %>
         </div>
 
         <div class="col col-lg-2">
-          <%= f.input :termination, wrapper: false, input_html: { :class => 'form-control transparent js-datepicker' }, placeholder: 'termination', label: false, required: false %>
+          <%= f.input :termination, wrapper: false, input_html: { class: 'form-control transparent js-datepicker' }, placeholder: 'termination', label: false, required: false %>
         </div>
 
         <div class="col col-lg-2">
-          <%= f.button :submit, 'Search', data: { disable_with: 'Please wait ...' }, :class => 'btn btn-default btn-block' %>
+          <%= f.button :submit, 'Search', data: { disable_with: 'Please wait ...' }, class: 'btn btn-default btn-block' %>
         </div>
       <% end %>
     </div><!-- /.row -->
