--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,6 +1,6 @@
-<%= simple_form_for(@vehicle, defaults: { label: false, input_html: { :class => 'transparent'}}) do |f| %>
+<%= simple_form_for(@vehicle, defaults: { label: false, input_html: { class: 'transparent'}}) do |f| %>
 
   <%= render 'fields', f: f %>
 
-  <%= f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
+  <%= f.button :submit, data: { disable_with: 'Please wait ...' }, class: 'btn btn-primary' %>
 <% end %>
