--- a/app/views/rents/_rent.html.erb
+++ b/app/views/rents/_rent.html.erb
@@ -1,11 +1,13 @@
-<%= content_tag_for(:article, rent) do %>
-  <header>
-    <h2><%= rent.title %></h2>
-  </header>
+<% present rent do |rent| %>
+  <%= content_tag_for(:article, rent) do %>
+    <header>
+      <h2><%= rent.title %></h2>
+    </header>
 
-  <ul>
-    <li><%= rent.price %></li>
-    <li><%= rent.start_date %></li>
-    <li><%= rent.end_date %></li>
-  </ul>
+    <ul>
+      <li><%= rent.price %></li>
+      <li><%= rent.start_date %></li>
+      <li><%= rent.end_date %></li>
+    </ul>
+  <% end %>
 <% end %>
