--- a/app/views/rents/_rent.html.erb
+++ b/app/views/rents/_rent.html.erb
@@ -6,8 +6,13 @@
 
     <ul>
       <li><%= rent.price %></li>
-      <li><%= rent.start_date %></li>
-      <li><%= rent.end_date %></li>
     </ul>
+
+    <% present rent.schedule do |schedule| %>
+      <ul>
+        <li><%= schedule.start_date %></li>
+        <li><%= schedule.end_date %></li>
+      </ul>
+    <% end %>
   <% end %>
 <% end %>
