--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -1,7 +1,9 @@
-<%= content_tag_for(:article, vehicle) do %>
-  <ul>
-    <li><%= vehicle.year %></li>
-    <li><%= vehicle.model %></li>
-    <li><%= vehicle.license_plate %></li>
-  </ul>
+<% present vehicle do |vehicle| %>
+  <%= content_tag_for(:article, vehicle) do %>
+    <ul>
+      <li><%= vehicle.year %></li>
+      <li><%= vehicle.model %></li>
+      <li><%= vehicle.license_plate %></li>
+    </ul>
+  <% end %>
 <% end %>
