--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,5 @@
-<%= content_tag_for(:article, user) do %>
-  <%= user.full_name %>
+<% present user do |user| %>
+  <%= content_tag_for(:article, user) do %>
+    <%= user.full_name %>
+  <% end %>
 <% end %>
