--- a/app/views/onboardings/_password_form.html.erb
+++ b/app/views/onboardings/_password_form.html.erb
@@ -5,6 +5,8 @@
   <%= f.input :phone_number,  as: :hidden %>
   <%= f.input :email,         as: :hidden %>
   <%= f.input :location,      as: :hidden %>
+  <%= f.input :start_time,    as: :hidden %>
+  <%= f.input :end_time,      as: :hidden %>
   <%= f.input :price,         as: :hidden %>
 
   <%= f.input :password, placeholder: 'password', autofocus: true %>
