Remove early Schedule implementation

--- a/app/views/rents/_rent_listing.html.erb
+++ b/app/views/rents/_rent_listing.html.erb
@@ -10,8 +10,8 @@
 
     <% present rent.schedule do |schedule| %>
       <ul>
-        <li><%= schedule.start_date %></li>
-        <li><%= schedule.end_date %></li>
+        <li><%= schedule.start_time %></li>
+        <li><%= schedule.end_time %></li>
       </ul>
     <% end %>
 
