--- a/app/views/rents/_rent_listing.html.erb
+++ b/app/views/rents/_rent_listing.html.erb
@@ -22,8 +22,13 @@
         <%= link_to 'Rent', new_guest_order_path(rent_id: rent.id), class: 'btn btn-default' %>
       <% end %>
 
-      <%= link_to 'Edit', edit_parking_rent_path(rent.parking, rent) %>
-      <%= link_to 'Destroy', parking_rent_path(rent.parking, rent), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% if rent.updatable_by?(current_user) %>
+        <%= link_to 'Edit', edit_parking_rent_path(rent.parking, rent) %>
+      <% end %>
+
+      <% if rent.deletable_by?(current_user) %>
+        <%= link_to 'Destroy', parking_rent_path(rent.parking, rent), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
     </footer>
   <% end %>
 <% end %>
