--- a/app/views/rents/edit.html.erb
+++ b/app/views/rents/edit.html.erb
@@ -2,4 +2,8 @@
 
 <%= render 'form' %>
 
+<% if @rent.deletable_by?(current_user) %>
+  <%= link_to 'Destroy', parking_path(@parking), method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
+
 <%= link_to 'Back', parking_path(@parking) %>
