--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Destroy', vehicle_path(@vehicle), method: :delete, data: { confirm: 'Are you sure?' } %>
+<% if @vehicle.deletable_by?(current_user) %>
+  <%= link_to 'Destroy', vehicle_path(@vehicle), method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
+
 <%= link_to 'Back', root_path %>
