Update Onboarding completion process

--- a/app/views/frontpage/frontpage.html.erb
+++ b/app/views/frontpage/frontpage.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="col col-lg-6">
-      <%= render 'onboardings/form' %>
+      <%= render 'onboardings/partial_form' %>
     </div>
 
   </div><!-- /.row -->
